force-app/main/default/objects/SalesOrder__c/fields/First_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Notice_Date__c</fullName>
    <label>First Notice Date</label>
    <type>Date</type>
</CustomField>