force-app/main/default/objects/SalesOrder__c/fields/Free_Financing_Credits__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Credits__c</fullName>
    <label>Free Financing Credits</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.SalesPrice__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderAdditionalChargeCredit__c.Name</field>
        <operation>equals</operation>
        <value>a0vd0000005LAdrAAG</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>