force-app/main/default/objects/SalesOrder__c/fields/Free_Financing_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Financing Request Approved</label>
    <type>Checkbox</type>
</CustomField>