force-app/main/default/objects/SalesOrder__c/fields/FreeFinancingApproved__c.field-meta.xml
<CustomField>
    <fullName>FreeFinancingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Financing Approved</label>
    <type>Checkbox</type>
</CustomField>