force-app/main/default/objects/SalesOrder__c/fields/FSP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Order_ID__c</fullName>
    <label>FSP Order ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>