force-app/main/default/objects/SalesOrder__c/fields/Fulfillment_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfillment Survey Sent</label>
    <type>Checkbox</type>
</CustomField>