force-app/main/default/objects/SalesOrder__c/fields/FulfillOrder__c.field-meta.xml
<CustomField>
    <fullName>FulfillOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfill Order</label>
    <type>Checkbox</type>
</CustomField>