force-app/main/default/objects/SalesOrder__c/fields/Grace_Period_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Cutoff__c</fullName>
    <formula>IF( Grace_Period_Sales_Allowed__c = TRUE, Market__r.Sales_Close__c + 2, Market__r.Sales_Close__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period Cutoff</label>
    <type>Date</type>
</CustomField>