force-app/main/default/objects/SalesOrder__c/fields/Grace_Period_Sale__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grace Period Sale</label>
    <type>Checkbox</type>
</CustomField>