force-app/main/default/objects/SalesOrder__c/fields/Grace_Period_Sales_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Sales_Allowed__c</fullName>
    <formula>Market__r.Allow_Sales_Grace_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Period Sales Allowed</label>
    <type>Checkbox</type>
</CustomField>