force-app/main/default/objects/SalesOrder__c/fields/Held_Team_Order__c.field-meta.xml
<CustomField>
    <fullName>Held_Team_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checks to fire approval process</inlineHelpText>
    <label>Held Team Order</label>
    <type>Checkbox</type>
</CustomField>