force-app/main/default/objects/SalesOrder__c/fields/Initial_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>