force-app/main/default/objects/SalesOrder__c/fields/Inscription_Line_1_Missing__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_1_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inscription Line 1 Missing</label>
    <type>Checkbox</type>
</CustomField>