force-app/main/default/objects/SalesOrder__c/fields/Inscription_Line_2_Missing__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Line_2_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inscription Line 2 Missing</label>
    <type>Checkbox</type>
</CustomField>