force-app/main/default/objects/SalesOrder__c/fields/Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Link__c</fullName>
    <formula>IF( ISPICKVAL(Status_Picklist__c, &quot;Released&quot;),
IF(AND( ISPICKVAL(Price_Book__r.Business_Unit__c, &apos;Essential Engine&apos;),  $CustomMetadata.FivestarSetting__mdt.Universal.Allow_Essential_Engine_Emails__c), HYPERLINK(&quot;/apex/EssentialEngineOrderPdfVf?id=&quot; + Id, &quot;Click Here for Invoice&quot;)
, HYPERLINK(&quot;/apex/SalesOrderPDF?id=&quot; + Id, &quot;Click Here for Invoice&quot;)), &quot;Invoice not available until order is released&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Link</label>
    <type>Text</type>
</CustomField>