force-app/main/default/objects/SalesOrder__c/fields/InvoiceCount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCount__c</fullName>
    <label>Invoice Count</label>
    <summaryForeignKey>OrderInvoiceRelationship__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>