force-app/main/default/objects/SalesOrder__c/fields/InvoiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Schedule</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>