force-app/main/default/objects/SalesOrder__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only 1 Primary Order is allowed for the assigned Opportunity.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>