force-app/main/default/objects/SalesOrder__c/fields/IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Manual Email and Order Release Functions are Disabled. Order Template displays Restricted message</inlineHelpText>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>