force-app/main/default/objects/SalesOrder__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>