force-app/main/default/objects/SalesOrder__c/fields/Market_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Market_Abbreviation__c</fullName>
    <formula>Market__r.Abbreviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Abbreviation</label>
    <type>Text</type>
</CustomField>