force-app/main/default/objects/SalesOrder__c/fields/Market_Free_Financing_Available__c.field-meta.xml
<CustomField>
    <fullName>Market_Free_Financing_Available__c</fullName>
    <formula>AND(Market__r.Free_Financing_Promo_Approved__c, Market__r.Free_Financing_Start_Date__c &gt;= TODAY(), Market__r.Free_Financing_End_Date__c &lt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Free Financing Available</label>
    <type>Checkbox</type>
</CustomField>