force-app/main/default/objects/SalesOrder__c/fields/Market_Publication__c.field-meta.xml
<CustomField>
    <fullName>Market_Publication__c</fullName>
    <formula>&quot;Market__r.Magazine_Text__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Publication</label>
    <type>Text</type>
</CustomField>