force-app/main/default/objects/SalesOrder__c/fields/Mixed_Percent__c.field-meta.xml
<CustomField>
    <fullName>Mixed_Percent__c</fullName>
    <formula>IF( AND(Tools_Total__c &gt; 0,Profile_Total__c &gt; 0), IF( (Profile_Discounts__c + Tool_Discounts__c) &gt; 0, 1-((Tools_Total__c + Profile_Total__c)-(Profile_Discounts__c + Tool_Discounts__c))/(Tools_Total__c + Profile_Total__c),0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mixed %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>