force-app/main/default/objects/SalesOrder__c/fields/Net_Due__c.field-meta.xml
<CustomField>
    <fullName>Net_Due__c</fullName>
    <formula>NetAmount__c - ( ExistingPayments__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Due After Scheduled and Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>