force-app/main/default/objects/SalesOrder__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <formula>round(ProductAmount__c + AdditionalChargeCreditAmount__c - TotalDiscountAmount__c + TotalTaxAmount__c + TotalVATAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>