force-app/main/default/objects/SalesOrder__c/fields/New_Mixed_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Mixed_Order_Discount__c</fullName>
    <formula>IF( AND( New_Profile_Total__c &gt; 0, New_Tool_Total__c &gt; 0), IF( ( New_Profile_Actual__c + New_Tool_Actual__c ) &gt; 0, ((New_Tool_Total__c + New_Profile_Total__c)-(New_Profile_Actual__c + New_Tool_Actual__c))/(New_Tool_Total__c + New_Profile_Total__c),0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Mixed Order Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>