force-app/main/default/objects/SalesOrder__c/fields/New_Profile_Total__c.field-meta.xml
<CustomField>
    <fullName>New_Profile_Total__c</fullName>
    <label>New Profile Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>