force-app/main/default/objects/SalesOrder__c/fields/New_Tool_Actual__c.field-meta.xml
<CustomField>
    <fullName>New_Tool_Actual__c</fullName>
    <label>New Tool Actual</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>