force-app/main/default/objects/SalesOrder__c/fields/New_Tool_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Tool_Discount__c</fullName>
    <formula>IF(New_Tool_Total__c &lt;&gt; 0, IF(New_Tool_Actual__c &lt;&gt; 0, (New_Tool_Total__c - New_Tool_Actual__c) / New_Tool_Total__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Tool Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>