force-app/main/default/objects/SalesOrder__c/fields/Notes_for_Ad_Prod__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Ad_Prod__c</fullName>
    <label>Notes for Ad Prod</label>
    <type>TextArea</type>
</CustomField>