force-app/main/default/objects/SalesOrder__c/fields/Online_Page_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Page_Status__c</fullName>
    <formula>IF(
    AND(
             RecordStatus__c &lt;&gt; &quot;Cancelled&quot;,
             OR( ISBLANK(OnlinePaymentExpirationDate__c),
                     OnlinePaymentExpirationDate__c&gt;=TODAY(),
                     RecordStatus__c = &quot;Approved&quot;,
                     RecordStatus__c = &quot;Released&quot;

                  )
    ),
    (&quot;[&quot; &amp; HYPERLINK(ShipToStreet__c&amp;&quot;/OnlineOrder?key=&quot; &amp; OnlineApprovalKey__c &amp; &quot;&amp;id=&quot;&amp; Id, &quot;Preview&quot;) &amp; &quot;] &quot; ),
    IF(
             OR(
                       ISBLANK(OnlinePaymentExpirationDate__c), 
                       RecordStatus__c  = &quot;Released&quot;,
                       RecordStatus__c = &quot;Cancelled&quot;
             ), 
             &quot;Inactive&quot;, 
             &quot;Expired&quot;
     )
)</formula>
    <label>Online Order Page Status</label>
    <type>Text</type>
</CustomField>