force-app/main/default/objects/SalesOrder__c/fields/OnlineApprovalKey__c.field-meta.xml
<CustomField>
    <fullName>OnlineApprovalKey__c</fullName>
    <description>Key used to validate online approval requests.</description>
    <label>Online Order Approval Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>