force-app/main/default/objects/SalesOrder__c/fields/OnlinePaymentExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OnlinePaymentExpirationDate__c</fullName>
    <description>This date is calculated using the Order Valid in Days field in Kugamon Settings from the creation date of this Order.

Draft and Sent Orders:
- Applies to Both PDF and Online Order, where Blank means Online Order Page never Expires.

Approved and Released Orders:
- Does not apply. Online Order Page never Expires regardless of Date.</description>
    <inlineHelpText>Blank = Online Order Pages Never Expire</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>