force-app/main/default/objects/SalesOrder__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <displayFormat>SO-{YYMMDD}-{0000000}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>