force-app/main/default/objects/SalesOrder__c/fields/OrderACCAppliedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderACCAppliedPaymentAmount__c</fullName>
    <label>Order ACC Applied Payment Amount</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.AppliedPaymentAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>