force-app/main/default/objects/SalesOrder__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>