force-app/main/default/objects/SalesOrder__c/fields/OrderName__c.field-meta.xml
<CustomField>
    <fullName>OrderName__c</fullName>
    <label>Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>