force-app/main/default/objects/SalesOrder__c/fields/OrderProductLineAppliedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderProductLineAppliedPaymentAmount__c</fullName>
    <label>Order Product Lin Applied Payment Amount</label>
    <summarizedField>SalesOrderProductLine__c.AppliedPaymentAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>