force-app/main/default/objects/SalesOrder__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <formula>IF(RecordStatus__c = &apos;Draft&apos;,
RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&apos;&amp;Id, &apos;Approve&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos;&amp;Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
IF(RecordStatus__c = &apos;Approved&apos;,
RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos;&amp;Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot;, RecordStatus__c
))</formula>
    <label>Deprecated</label>
    <type>Text</type>
</CustomField>