force-app/main/default/objects/SalesOrder__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Filled from Payment Method on the Quote if Order is generated from Quote; otherwise, from Payment Method on the Additional Account Info.

If Online Checkout is enabled, Payment Method not equal to &quot;Invoice&quot; will display [Accept &amp; Pay] on Online Order.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Debit/Credit Card</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>