force-app/main/default/objects/SalesOrder__c/fields/Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Payments_Made__c</fullName>
    <label>Payments Made</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>