force-app/main/default/objects/SalesOrder__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <defaultValue>&quot;Deprecated&quot;</defaultValue>
    <description>Deprecated field. Use PaymentStatus2__c</description>
    <label>Deprecated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>