force-app/main/default/objects/SalesOrder__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 7 Days</fullName>
            </value>
            <value>
                <fullName>Net 10 Days</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
            <value>
                <fullName>Net 90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>