force-app/main/default/objects/SalesOrder__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changing the price book will delete all product order lines associated with this sales order.</description>
    <inlineHelpText>Changing the price book will delete all product order lines associated with this sales order.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>