force-app/main/default/objects/SalesOrder__c/fields/Pricebook_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Business_Unit__c</fullName>
    <formula>TEXT( Price_Book__r.Business_Unit__c )</formula>
    <label>Pricebook Business Unit</label>
    <type>Text</type>
</CustomField>