force-app/main/default/objects/SalesOrder__c/fields/PriceBookName__c.field-meta.xml
<CustomField>
    <fullName>PriceBookName__c</fullName>
    <defaultValue>&quot;Price_Book__r.Name&quot;</defaultValue>
    <inlineHelpText>To change the price book associated with this order, please click on the Choose Price Book button</inlineHelpText>
    <label>Price Book Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>