force-app/main/default/objects/SalesOrder__c/fields/Print_Profile_Check__c.field-meta.xml
<CustomField>
    <fullName>Print_Profile_Check__c</fullName>
    <description>checks to see whether there is a print profile order product line</description>
    <label>Print Profile Check</label>
    <summaryFilterItems>
        <field>SalesOrderProductLine__c.Base_Product_Text__c</field>
        <operation>equals</operation>
        <value>Profile</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>