force-app/main/default/objects/SalesOrder__c/fields/PrintComments__c.field-meta.xml
<CustomField>
    <fullName>PrintComments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Comments</label>
    <type>Checkbox</type>
</CustomField>