force-app/main/default/objects/SalesOrder__c/fields/PrintSpecificTextandTerms__c.field-meta.xml
<CustomField>
    <fullName>PrintSpecificTextandTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Specific Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>