force-app/main/default/objects/SalesOrder__c/fields/Product_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Amount__c</fullName>
    <label>Product Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>