force-app/main/default/objects/SalesOrder__c/fields/Product_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Tax_Amount__c</fullName>
    <label>Product Tax Amount</label>
    <summarizedField>SalesOrderProductLine__c.Tax_Amount_Hidden__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>