force-app/main/default/objects/SalesOrder__c/fields/ProductAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductAmount__c</fullName>
    <label>Product Amount</label>
    <summarizedField>SalesOrderProductLine__c.ProductAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>