force-app/main/default/objects/SalesOrder__c/fields/ProductDateAvailableToPromise__c.field-meta.xml
<CustomField>
    <fullName>ProductDateAvailableToPromise__c</fullName>
    <label>Product Date Available to Promise</label>
    <summarizedField>SalesOrderProductLine__c.DateAvailableToPromise__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>