force-app/main/default/objects/SalesOrder__c/fields/ProductDateRequired__c.field-meta.xml
<CustomField>
    <fullName>ProductDateRequired__c</fullName>
    <label>Product Date Required</label>
    <summarizedField>SalesOrderProductLine__c.DateRequired__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>