force-app/main/default/objects/SalesOrder__c/fields/ProductDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscountAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>