force-app/main/default/objects/SalesOrder__c/fields/ProductTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ProductTotalAmount__c</fullName>
    <formula>round(ProductAmount__c - ProductDiscountAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>