force-app/main/default/objects/SalesOrder__c/fields/Profession_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Profession_from_Contact__c</fullName>
    <formula>ContactBuying__r.Profession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession (from Contact)</label>
    <type>Text</type>
</CustomField>