force-app/main/default/objects/SalesOrder__c/fields/Profile_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Profile_Discount_Total__c</fullName>
    <formula>Profiles_List_Total__c - Profiles_Actual_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>