force-app/main/default/objects/SalesOrder__c/fields/Profile_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Profile_Discounts__c</fullName>
    <label>Profile Discounts</label>
    <summarizedField>SalesOrderProductLine__c.Actual_Discount__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderProductLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Magazine Profile</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>