force-app/main/default/objects/SalesOrder__c/fields/Profile_Percent__c.field-meta.xml
<CustomField>
    <fullName>Profile_Percent__c</fullName>
    <formula>IF(Profile_Total__c &lt;&gt; 0, IF(Profile_Discounts__c &lt;&gt; 0,Profile_Discounts__c / Profile_Total__c ,0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>