force-app/main/default/objects/SalesOrder__c/fields/Profile_Total__c.field-meta.xml
<CustomField>
    <fullName>Profile_Total__c</fullName>
    <label>Profile Total</label>
    <summarizedField>SalesOrderProductLine__c.Line_Total__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderProductLine__c.Product_Type__c</field>
        <operation>contains</operation>
        <value>Magazine Profile</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>