force-app/main/default/objects/SalesOrder__c/fields/Profiles_Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Actual_Total__c</fullName>
    <label>Profiles Actual Total</label>
    <summarizedField>SalesOrderProductLine__c.Actual_Selling_Price__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderProductLine__c.Product_Type__c</field>
        <operation>contains</operation>
        <value>Magazine Profile</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>