force-app/main/default/objects/SalesOrder__c/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>Valid Statuses are: Draft, Sent, Approved, Released, and Cancelled. Released Order status cannot be manually changed; use Status formula field instead. Cancelled Order status cannot be changed at all.</description>
    <label>Record Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>