force-app/main/default/objects/SalesOrder__c/fields/Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment__c</fullName>
    <formula>(TotalAmount__c - Down_Payment__c +  Finance_Charge__c )  /  Additional_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>