force-app/main/default/objects/SalesOrder__c/fields/Recurring_Subscription_Value__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Subscription_Value__c</fullName>
    <label>Recurring Subscription Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>